--- a/.github/workflows/qase-tests.yml
+++ b/.github/workflows/qase-tests.yml
@@ -16,6 +16,6 @@ jobs:
       - run: pytest --qase
       
 env:
-  APP_URL: ${{ secrets.APP_URL }}
-  TEST_EMAIL: ${{ secrets.TEST_EMAIL }}
+  APP_URL: ${{ secrets.BASE_URL }}
+  TEST_EMAIL: ${{ secrets.TEST_EMAIL_1 }} # нет профилей
   TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
