--- a/.github/workflows/qase-tests.yml
+++ b/.github/workflows/qase-tests.yml
@@ -21,3 +21,4 @@ env:
   APP_URL: ${{ secrets.BASE_URL }}
   TEST_EMAIL: ${{ secrets.TEST_EMAIL_1 }} # нет профилей
   TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
+  TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
