--- a/.github/workflows/qase-tests.yml
+++ b/.github/workflows/qase-tests.yml
@@ -26,7 +26,7 @@ jobs:
       QASE_API_TOKEN: ${{ secrets.QASE_API_TOKEN }}
       QASE_PROJECT_CODE: ${{ secrets.QASE_PROJECT_CODE }}
       QASE_RUN_ID: ${{ github.event.client_payload.run_id }} 
-      APP_URL: ${{ secrets.BASE_URL }}
+      BASE_URL: ${{ secrets.BASE_URL }}
       TEST_EMAIL: ${{ secrets.TEST_EMAIL_1 }}
       TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
       TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
