--- a/.github/workflows/qase-tests.yml
+++ b/.github/workflows/qase-tests.yml
@@ -16,13 +16,17 @@ jobs:
       TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Upgrade pip
         run: pip install --upgrade pip
+
       - name: Install dependencies
         run: pip install --no-cache-dir -r requirements.txt
+
       - name: Run tests with Qase
         run: |
           pytest \
@@ -31,12 +35,24 @@ jobs:
             --qase-testops-project="$QASE_PROJECT_CODE" \
             --qase-testops-run-title="CI run" \
             --qase-testops-upload-attachments
+
+      - name: Debug: list workspace
+        if: always()
+        run: |
+          echo "=== pwd ==="
+          pwd
+          echo "=== tree . (2 levels) ==="
+          find . -maxdepth 2 -type d -print
+          echo "=== screenshots ==="
+          ls -R screenshots || true
+          echo "=== .selene ==="
+          ls -R .selene || true
+
       - name: Upload screenshots
-        if: always()     # выполняется даже если тесты упали
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: screenshots
           path: |
             screenshots/**
             .selene/screenshots/**
-
