remove test marks, add suite marks, change test names, add tg bot, change bat files, add bash files

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 addopts = -v --tb=short
 markers =
-    qase: link test to Qase
+    login: все тесты из набора login_page
+    signup: все тесты из набора signup_page
