remove tg-bot add regdet tests add visual_reports

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -v --tb=short
+addopts = --tb=short
 markers =
     login: все тесты из набора login_page
     signup: все тесты из набора signup_page
